convert-time added

--- a/template.yaml
+++ b/template.yaml
@@ -35,6 +35,18 @@ Resources:
           Properties: 
             Path: /clock
             Method: get
+  ConvertTimeFunction:
+    Type: AWS::Serverless::Function
+    Properties: 
+      CodeUri: convert-time/
+      Handler: handler.convertTime
+      Runtime: nodejs12.x
+      Events: 
+        ConvertTimeApi:
+          Type: Api
+          Properties: 
+            Path: /convert
+            Method: get
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
